--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,11 @@
 {
-  "name": "kwaadpepper/chronopost-wsdl",
+  "name": "kwaadpepper/chronopost-shipping",
   "description": "Package generated from https://ws.chronopost.fr/shipping-cxf/ShippingServiceWS?wsdl using wsdltophp/packagegenerator",
   "license": "MIT",
-  "homepage": "https://github.com/Kwaadpepper/chronopost",
+  "homepage": "https://github.com/Kwaadpepper/chronopost-shipping",
   "keywords": [
     "chronopost",
+    "shipping",
     "WSDL",
     "Lib",
     "Api"
